ftpreview/dlli.h

typedef void *DWYCO_LIST;
typedef DWYCO_LIST DWYCO_USER_LIST;
typedef DWYCO_LIST DWYCO_UNSAVED_MSG_LIST;
typedef DWYCO_LIST DWYCO_SAVED_MSG_LIST;
typedef  void (DWYCOCALLCONV *DwycoStatusCallback)(int id, const char *msg, int percent_done, void *user_arg);
typedef  void (DWYCOCALLCONV *DwycoMessageDownloadCallback)(int id, int what, const char *msgid, void *mdc_arg1);
#define DWYCO_PAL_AUTH_STATUS_FAILED 0
#define DWYCO_PAL_AUTH_STATUS_REQUIRES_AUTHORIZATION 1
#define DWYCO_PAL_AUTH_STATUS_ALREADY_AUTHORIZED 2
int DWYCOEXPORT dwyco_selective_chat_recipient_enable(const char *uid, int len_uid, int enable);
int DWYCOEXPORT dwyco_selective_chat_enable(int e);
void DWYCOEXPORT dwyco_reset_selective_chat_recipients();
int DWYCOEXPORT dwyco_is_selective_chat_recipient(const char *uid, int len_uid);
// message send callback status
#define DWYCO_MSG_SEND_OK 1
#define DWYCO_MSG_SEND_FAILED 2
#define DWYCO_MSG_IGNORED 3
#define DWYCO_MSG_ATTACHMENT_DECLINED 4
#define DWYCO_MSG_ATTACHMENT_FAILED 5
// message download (from server) status
#define DWYCO_MSG_DOWNLOAD_FAILED 0
#define DWYCO_MSG_DOWNLOAD_SAVE_FAILED 1
#define DWYCO_MSG_DOWNLOAD_FETCHING_ATTACHMENT 3
#define DWYCO_MSG_DOWNLOAD_ATTACHMENT_FETCH_FAILED 4
#define DWYCO_MSG_DOWNLOAD_OK 5
#define DWYCO_MSG_DOWNLOAD_RATHOLED 6
// autoupdate download status
#define DWYCO_AUTOUPDATE_SIGNATURE_FAILED 0
#define DWYCO_AUTOUPDATE_DOWNLOAD_FAILED 1
#define DWYCO_AUTOUPDATE_RUN_FAILED 2
// NOTE: on Windows, if this status is returned
// to the callback, the autoupdate has been started
// and is waiting on a MUTEX that is created when dwyco_init
// is called.
// The autoupdate process waits in the
// background until the mutex is released, and then
// performs whatever update it needs to. This is
// primarily because you can't update an executable
// while it is being used under Windows
#define DWYCO_AUTOUPDATE_IN_PROGRESS 3
// autoupdate check status

// by convention, "AVAILABLE" means an optional update (ie, user
// should click a button to do the update.)
// the COMPULSORY1 should be automatically start the download
// in full view of the user at program startup, and do the update
// when the download finishes. this gives maximal opportunity for
// the update to work in situations where the program may be
// crashing due to some nasty bug. there should be no way for the user
// to cancel the update.
// COMPULSORY2 should download in the background automatically
// without notifying the user, then either at program shutdown or
// some other convenient time, perform the update.
#define DWYCO_AUTOUPDATE_CHECK_FAILED 0
#define DWYCO_AUTOUPDATE_CHECK_NOT_NEEDED 1
#define DWYCO_AUTOUPDATE_CHECK_AVAILABLE 2
// these are returned from
// dwyco_authenticate_body (ORed together)
// NOTE: because some old messages
// have no authentication AUTH_OK
// can be or'ed with NO_INFO.
// which would warrant a warning to
// the user. also note, if a message
// is a composite message (like it was
// forwarded), these bits are set
// independently for EACH component.
// so you might have a string of "ok"
// parts, but one is corrupted so both
// AUTH_OK and AUTH_FAILED could be set
// at the same time.
#define DWYCO_VERF_AUTH_NO_INFO 0x1
#define DWYCO_VERF_AUTH_FAILED 0x2
#define DWYCO_VERF_AUTH_OK 0x4
void DWYCOEXPORT dwyco_get_my_uid(const char **uid_out, int *len_out);
int DWYCOEXPORT dwyco_enable_video_capture_preview(int on);
void DWYCOEXPORT dwyco_add_entropy_timer(char *crap, int crap_len);
int DWYCOEXPORT dwyco_get_refresh_users();
void DWYCOEXPORT dwyco_set_refresh_users(int);
int DWYCOEXPORT dwyco_get_rescan_messages();
void DWYCOEXPORT dwyco_set_rescan_messages(int);
int DWYCOEXPORT dwyco_uid_g(const char *uid, int len_uid);
int DWYCOEXPORT dwyco_load_users();
int DWYCOEXPORT dwyco_get_message_bodies(DWYCO_SAVED_MSG_LIST *list_out, const char *uid, int uid_len, int load_sent);
int DWYCOEXPORT dwyco_get_unsaved_messages(DWYCO_UNSAVED_MSG_LIST *list_out, const char *uid, int len_uid);
int DWYCOEXPORT dwyco_unsaved_message_to_body(DWYCO_SAVED_MSG_LIST *list_out, const char *msg_id);
int DWYCOEXPORT dwyco_delete_unsaved_message(const char *msg_id);
int DWYCOEXPORT dwyco_delete_saved_message(const char *user_id, int len_uid, const char *msg_id);
int DWYCOEXPORT dwyco_save_message(const char *msg_id);
int DWYCOEXPORT dwyco_get_saved_message(DWYCO_SAVED_MSG_LIST *list_out, const char *user_id, int len_uid, const char *msg_id);
int DWYCOEXPORT dwyco_fetch_server_message(const char *msg_id, DwycoMessageDownloadCallback cb, void *mdc_arg1,
        DwycoStatusCallback scb, void *scb_arg1);
void DWYCOEXPORT dwyco_cancel_message_fetch(int fetch_id);
// get_body_text returns a list with a single row (=0)
// in it, and no columns. the item in the list is
// the formatted text of the message, which may include
// forwarded messages. the formatting is simple and fixed. see get_body_array
// if you need more control over message formatting.
DWYCO_LIST DWYCOEXPORT dwyco_get_body_text(DWYCO_SAVED_MSG_LIST m);
//
// get_body_array returns a list of lists
// in the same way the directory functions do, except
// in this case, each entry in the list is a message.
// each message is a forwarded component, with the latest
// component being at index 0, and earlier components coming
// in order at larger indexes.
// if the message has no forwarded parts,
// then just the top level message will be in the list.
// this allows you to format forwarded message in any
// way you want (instead of just being stuck with the
// formatting provided by dwyco_get_body_text.)
// each message is formatted in exactly the same way
// as a DWYCO_QM_BODY_...
//
DWYCO_LIST DWYCOEXPORT dwyco_get_body_array(DWYCO_SAVED_MSG_LIST m);
int DWYCOEXPORT dwyco_authenticate_body(DWYCO_SAVED_MSG_LIST m, const char *recip_uid, int len_uid, int unsaved);
DWYCO_LIST DWYCOEXPORT dwyco_uid_to_info(const char *user_id, int len_uid, int *cant_resolve_now);
// there are some access functions for
// getting at the components of these
// lists. they are accessed basically like
// a 2-d array. all results are strings that
// must be copied out.

void DWYCOEXPORT dwyco_list_release(DWYCO_LIST l);
int DWYCOEXPORT dwyco_list_numelems(DWYCO_LIST l, int *rows, int *cols);
int DWYCOEXPORT dwyco_list_get(DWYCO_LIST l, int row, const char *col,
                               const char **out, int *len_out, int *type_out);
int DWYCOEXPORT dwyco_list_print(DWYCO_LIST l);
// types returned by get_list
#define DWYCO_TYPE_NIL 0
#define DWYCO_TYPE_STRING 1
#define DWYCO_TYPE_INT 2
#define DWYCO_TYPE_VECTOR 3
// use this for dwyco_lists that are a
// single column
#define DWYCO_NO_COLUMN ""
// return from dwyco_uid_to_info
#define DWYCO_INFO_HANDLE "000"
#define DWYCO_INFO_LOCATION "001"
// return from dwyco_get_vfw_drivers
#define DWYCO_VFW_DRIVER_INDEX "000"
#define DWYCO_VFW_DRIVER_NAME "001"
#define DWYCO_VFW_DRIVER_VERSION "002"
// index strings for various data structures used by the core.
// Server list records
#define DWYCO_SL_SERVER_HOSTNAME "000"
#define DWYCO_SL_SERVER_IP "001"
#define DWYCO_SL_SERVER_PORT "002"
#define DWYCO_SL_SERVER_RATING "003"
#define DWYCO_SL_SERVER_NAME "004"
#define DWYCO_SL_SERVER_CATEGORY "005"
//#define DWYCO_QM_BODY_NEW_TEXT_do_not_use_directly_use_get_msg_array "009"
#define DWYCO_QM_BODY_NEW_TEXT2 "009"
// Pal authorization and special message passing options
// For pal authorization, dwyco defines the special messages
// for the various requests.
// User defined requests are passed with an id
// that should be checked by the receiver, and ignored
// if it doesn't understand it.
//

// these are used as arguments to the
// dwyco_make_special_zap_composition
#define DWYCO_PAL_AUTH_ASK 1
#define DWYCO_PAL_AUTH_REJECT 2
#define DWYCO_PAL_AUTH_ACCEPT 3
#define DWYCO_SPECIAL_TYPE_USER 4
// returns 1 if it is special, and what_out will
// be set to one of the following
// if uid == 0, msg_id must refer to an unsaved msg. if the msg hasn't been
// fetched from the server, what_out will be one of the *SUMMARY* types.
// if uid != 0, msg_id must refer to a saved msg from uid (NOTE: THIS IS BROKEN)
int DWYCOEXPORT dwyco_is_special_message(const char *uid, int len_uid, const char *msg_id, int *what_out);
// "what" returns from the dwyco_is_special_message function
#define DWYCO_SUMMARY_PAL_AUTH_REQ 0
#define DWYCO_SUMMARY_PAL_OK 1
#define DWYCO_SUMMARY_PAL_REJECT 2
#define DWYCO_SUMMARY_SPECIAL_USER_DEFINED 3
#define DWYCO_PAL_AUTH_REQ 4
#define DWYCO_PAL_OK 5
#define DWYCO_PAL_REJECT 6
#define DWYCO_SPECIAL_USER_DEFINED 7
int DWYCOEXPORT dwyco_init();
int DWYCOEXPORT dwyco_make_special_zap_composition(
    int special_type,
    const char *user_id,
    const char *user_block,
    int len_user_block
);
int DWYCOEXPORT
dwyco_make_file_zap_composition(
    const char *filename,
    int len_filename
);
int DWYCOEXPORT
dwyco_copy_out_file_zap(
    const char *uid,
    int len_uid,
    const char *msg_id,
    const char *dst_filename
);
int DWYCOEXPORT dwyco_is_file_zap(int compid);
// see notes in dlli.cpp regarding how these work on
// non-windows platforms
DWYCO_LIST DWYCOEXPORT dwyco_get_vfw_drivers();