bld/cdc32/old/cdcdll.pas


function dwyco_is_special_message(mid: PChar;  var what:Integer): Integer; stdcall;
function dwyco_make_file_zap_composition(filename: PChar; len_filename: Integer): Integer ;  stdcall;
function dwyco_copy_out_file_zap(uid: PChar;
	                         len_uid: Integer;
	                         msg_id: PChar;
	                         dst_filename:PChar): Integer ;  stdcall;
function dwyco_is_file_zap(compid: Integer): Integer ;  stdcall;
function dwyco_selective_chat_recipient_enable(uid: PChar; len_uid: integer; enable:integer): integer;stdcall  ;
function dwyco_selective_chat_enable(enable: integer): integer ;stdcall  ;
procedure dwyco_reset_selective_chat_recipients();stdcall  ;
function dwyco_is_selective_chat_recipient(uid: PChar; len_uid: integer): integer ;stdcall  ;

//  password change values for the "succ" arg on the CommandCallback
//  for the "fetch password" command }
const DWYCO_CMD_FETCH_PW_EMAIL = 2;    // return "err" is email address password was mailed to
const DWYCO_CMD_FETCH_PW_PASSWORD = 3; // return "err" is actual password

// message send callback status
const DWYCO_MSG_SEND_OK = 1;
const DWYCO_MSG_SEND_FAILED = 2;
const DWYCO_MSG_IGNORED = 3;
const DWYCO_MSG_ATTACHMENT_DECLINED = 4;
const DWYCO_MSG_ATTACHMENT_FAILED = 5;

// message download callback statuses
const DWYCO_MSG_DOWNLOAD_FAILED = 0;
const DWYCO_MSG_DOWNLOAD_SAVE_FAILED = 1;
const DWYCO_MSG_DOWNLOAD_FETCHING_ATTACHMENT = 3;
const DWYCO_MSG_DOWNLOAD_ATTACHMENT_FETCH_FAILED = 4;
const DWYCO_MSG_DOWNLOAD_OK = 5;
const DWYCO_MSG_DOWNLOAD_RATHOLED = 6;

// ratings
const DWYCO_RATING_ADULT = 0;
const DWYCO_RATING_GENERAL = 1;

// AutoUpdate download status indicators
const DWYCO_AUTOUPDATE_SIGNATURE_FAILED = 0;
const DWYCO_AUTOUPDATE_DOWNLOAD_FAILED = 1;
const DWYCO_AUTOUPDATE_RUN_FAILED = 2;

//  NOTE: on Windows, if this status is returned to the callback, the
//  autoupdate has been started and is waiting on a MUTEX that is created
//  when dwyco_init is called. The autoupdate process waits in the background
//  until the mutex is released, and then performs whatever update it needs to.
//  This is primarily because you can't update an executable while it is being
//  used under Windows
const DWYCO_AUTOUPDATE_IN_PROGRESS = 3;

// AutoUpdate CHECK status
const DWYCO_AUTOUPDATE_CHECK_FAILED = 0;
const DWYCO_AUTOUPDATE_CHECK_NOT_NEEDED = 1;
const DWYCO_AUTOUPDATE_CHECK_AVAILABLE = 2;
const DWYCO_AUTOUPDATE_CHECK_COMPULSORY1 = 3;
const DWYCO_AUTOUPDATE_CHECK_COMPULSORY2 = 4;

// directory sort columns
const DWYCO_SORT_HANDLE = 0;
const DWYCO_SORT_DESCRIPTION = 1;
const DWYCO_SORT_LOCATION = 2;

//  These are what is returned from dwyco_authenticate_body (ORed together)
//  NOTE: because some old messages have no authentication AUTH_OK can be or'ed
//  with NO_INFO. which would warrant a warning to the user.
const DWYCO_VERF_AUTH_NO_INFO = 1;
const DWYCO_VERF_AUTH_FAILED = 2;
const DWYCO_VERF_AUTH_OK = 4;

// "what" returns from the dwyco_is_special_message function
const DWYCO_SUMMARY_PAL_AUTH_REQ  = 0;
const DWYCO_SUMMARY_PAL_OK  = 1;
const DWYCO_SUMMARY_PAL_REJECT  = 2;
const DWYCO_SUMMARY_SPECIAL_USER_DEFINED  = 3;
const DWYCO_PAL_AUTH_REQ  = 4;
const DWYCO_PAL_OK  = 5;
const DWYCO_PAL_REJECT  = 6;
const DWYCO_SPECIAL_USER_DEFINED  = 7;

// these come in via the "what" arg in the PalAuthCallback
const DWYCO_PAL_AUTH_STATUS_FAILED = 0;
const DWYCO_PAL_AUTH_STATUS_REQUIRES_AUTHORIZATION = 1;
const DWYCO_PAL_AUTH_STATUS_ALREADY_AUTHORIZED = 2;

{
// these are used as arguments to the
// dwyco_make_special_zap_composition
}
const DWYCO_PAL_AUTH_ASK  = 1;
const DWYCO_PAL_AUTH_REJECT  = 2;
const DWYCO_PAL_AUTH_ACCEPT  = 3;
const DWYCO_SPECIAL_TYPE_USER  = 4;


{/// there are some access functions for }
{/// getting at the components of these }
{/// lists. they are accessed basically like }
{/// a 2-d array. all results are strings that }
{/// must be copied out. }

procedure dwyco_get_my_uid(var uid_out: PChar; var len_out: Integer);  stdcall   ;
function dwyco_enable_video_capture_preview(onoff: Integer; var uid_out: Integer): Integer; stdcall   ;
procedure dwyco_add_entropy_timer(crap: PChar; len: integer); stdcall   ;

function dwyco_get_refresh_users: Integer ;stdcall   ;
procedure dwyco_set_refresh_users(i: Integer);stdcall   ;
function dwyco_get_rescan_messages: Integer ;stdcall   ;
procedure dwyco_set_rescan_messages(i: Integer) ;stdcall   ;

function dwyco_load_users: Integer ;stdcall   ; 

function dwyco_get_user_list(var list_out: DWYCO_USER_LIST; 
                             var nelems: Integer): Integer ;stdcall   ; 

function dwyco_get_message_bodies(var list_out: DWYCO_SAVED_MSG_LIST; 
                                  uid: PChar;
                                  len_uid: Integer;
                                  load_sent: Integer): Integer ;stdcall   ; 

function dwyco_get_unsaved_messages(var list_out: DWYCO_UNSAVED_MSG_LIST; 
                                    uid: PChar; len_uid: Integer): Integer ;stdcall   ;

function dwyco_unsaved_message_to_body(var list_out: DWYCO_SAVED_MSG_LIST;
                                       msg_id: PChar): Integer ;stdcall   ;



//  this returns a list with no columns, and one row containing the formatted
//  text of the message, *including* any forwarded messages. it is HIGHLY
//  RECOMMENDED that you use this instead of accessing the fields
//  QM_BODY_TEXT/NEW_TEXT directly, because this functions knows how to
//  unwind forwarded messages.
function dwyco_get_body_text(m: DWYCO_SAVED_MSG_LIST): DWYCO_LIST; stdcall   ;

{
In the past, you had to directly access the message body dwyco_list using
DWYCO_QM_BODY_TEXT. Unfortunately, directly accessing the text for a
FORWARDED message wasn't easy, and resulted in having to use
dwyco_get_body_text, which only had fixed formatting (which broke the HTML
stuff.)

dwyco_get_body_array returns a list, each ROW of the list is a MESSAGE. in
the case of messages that were not forwarded, you'll get one row with a
message. access the DWYCO_QM_BODY_NEW_TEXT2 attribute to get the text.

in the case where a message is FORWARDED, each ROW in the body array will be
a message. ROW 0 is the latest text, ROW 1 is the message that was originally
created (in ICUII there will only ever be rows 0 and 1, because strip_chain
is wired to strip out intermediate forwards. but in general, there could be
lots of messages inside a forwarded message.)

by using get_body_array, you can format a forwarded message any way you want.
see main.cpp "show_body_array" for an example of using the function.

in order to help you find where you use BODY_TEXT directly, i have renamed
them in the header so your code won't compile immediately. everywhere you use
this directly, you should consider putting a call to a function that uses
get_body_array to format a message. this *should* allow you to properly
HTML-ize messages, even forwarded ones, without having to rely on the goofy
formatting available from "get_body_text". if you are absolutely dying to use
the attribute directly for some reason, read the header,
i just added a "2" on the end.
}
function dwyco_get_body_array(m: DWYCO_SAVED_MSG_LIST): DWYCO_LIST; stdcall   ;

function dwyco_authenticate_body(m: DWYCO_SAVED_MSG_LIST; recip_uid: PChar; len_uid: Integer): Integer; stdcall   ;

function dwyco_delete_unsaved_message(msgid: PChar): Integer; stdcall   ;
function dwyco_delete_saved_message(uid: PChar; len_uid: Integer; msg_id: PChar): Integer;stdcall   ;
function dwyco_save_message(msg_id: PChar): Integer;  stdcall   ;
function dwyco_get_saved_message(var list_out: DWYCO_SAVED_MSG_LIST; uid: PChar; len_uid: Integer; msg_id: PChar): Integer;stdcall   ; 
function dwyco_fetch_server_message(msgid: PChar; cb: DwycoMessageDownloadCallback; mdc_arg: Pointer; scb: DwycoStatusCallback; scb_arg: Pointer): Integer; stdcall;
procedure dwyco_cancel_message_fetch(fetch_id: Integer);stdcall;
procedure dwyco_update_user_info(uid: PChar; len: Integer);stdcall;

procedure dwyco_list_release(l: DWYCO_LIST) ;stdcall   ;

function dwyco_list_numelems(l: DWYCO_LIST; 
                             var rows: Integer; 
                             var cols: Integer): Integer ;stdcall   ; 

function dwyco_list_get(l: DWYCO_LIST; 
                        row: Integer; 
                        col: PChar; 
                        var val_out: PChar; 
                        var len_out: Integer; 
                        var type_out: Integer): Integer ;stdcall   ; 

function dwyco_list_print(l: DWYCO_LIST): Integer ;stdcall   ; 

procedure dwyco_simple_diagnostics(var res_out: PChar; var len_out: Integer);stdcall   ;

{ ************************************************************************** }
{                                                                            }
{ WARNING: this function is BLOCKING, and it uses external programs to       }
{ find ip addresses, so you will see cmd prompts pop up when you call it.    }
{                                                                            }
{ ************************************************************************** }
procedure dwyco_network_diagnostics(var res: PChar; var len_res: Integer);stdcall   ;

//  bandwdiths returned are in BITS per SECOND the "res" return contains some
//  text that may have errors and other useful info for tech support
//  WARNING: this function is BLOCKING, it will not return until the test
//  is complete, which may be some seconds on slow modems
procedure dwyco_estimate_bandwidth(var out_bw: Integer; var in_bw: Integer; var res: PChar; var len: Integer); stdcall   ;

function dwyco_uid_g(uid: PChar; len_uid: Integer): Integer ;stdcall   ;

// types returned by get_list
const DWYCO_TYPE_NIL = 0;
const DWYCO_TYPE_STRING = 1;
const DWYCO_TYPE_INT = 2;
const DWYCO_TYPE_VECTOR = 3;

// use this for dwyco_lists that are a single column
const DWYCO_NO_COLUMN = '';

// return from dwyco_uid_to_info
const DWYCO_INFO_HANDLE = '000';
const DWYCO_INFO_LOCATION = '001';

// return from dwyco_get_vfw_drivers
const DWYCO_VFW_DRIVER_INDEX = '000';
const DWYCO_VFW_DRIVER_NAME = '001';
const DWYCO_VFW_DRIVER_VERSION = '002';

// index strings for various data structures used by the core.
// Server list records
const DWYCO_SL_SERVER_HOSTNAME = '000';
const DWYCO_SL_SERVER_IP = '001';
const DWYCO_SL_SERVER_PORT = '002';
const DWYCO_SL_SERVER_RATING = '003';
const DWYCO_SL_SERVER_NAME = '004';
const DWYCO_SL_SERVER_CATEGORY = '005';

// User list records
const DWYCO_UL_DIRNAME = '000';        // xxx.usr
const DWYCO_UL_INFO = '001';           // info vec from server
const DWYCO_UL_QIR_FROM = '001000';
const DWYCO_UL_QIR_HANDLE = '001001';
const DWYCO_UL_QIR_EMAIL = '001002';
const DWYCO_UL_QIR_ICQ = '001003';
const DWYCO_UL_QIR_FIRST = '001004';
const DWYCO_UL_QIR_LAST = '001005';
const DWYCO_UL_QIR_DESCRIPTION = '001006';
const DWYCO_UL_QIR_LOCATION = '001007';
// note: may be runtime fields added here by cdc UI stuff (this is wrong, really...
